--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ITIS-6177-Week-01",
+  "name": "itis-6177-week01",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
